--- a/style/style.css
+++ b/style/style.css
@@ -89,7 +89,7 @@ img {
   z-index: 100;
 }
 
-/* nav and stickly class at the same time */
+/* nav and sticky class at the same time */
 .nav.sticky {
   position: fixed;
   background-color: rgba(255, 255, 255, 0.95);
@@ -130,7 +130,6 @@ img {
 
 .nav__link--btn:hover,
 .nav__link--btn:active {
-  color: inherit;
   background-color: var(--color-primary-darker);
   color: #333;
 }
@@ -537,8 +536,7 @@ h4 {
 .footer__logo {
   height: 5rem;
   display: block;
-  margin: 0 auto;
-  margin-bottom: 5rem;
+  margin: 0 auto 5rem;
 }
 
 .footer__copyright {
