--- a/style/style.css
+++ b/style/style.css
@@ -399,7 +399,7 @@ h4 {
     transform: translate(50%, -50%);
 }
 
-.dots {
+.dots, .dots-img {
     position: absolute;
     bottom: 5%;
     left: 50%;
@@ -407,7 +407,7 @@ h4 {
     display: flex;
 }
 
-.dots__dot {
+.dots__dot, .dots__dot-img {
     border: none;
     background-color: #b9b9b9;
     opacity: 0.7;
@@ -422,13 +422,17 @@ h4 {
     /* box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.7); */
 }
 
-.dots__dot:last-child {
+.dots__dot:last-child, .dots__dot-img:last-child {
     margin: 0;
 }
 
 .dots__dot--active {
-    /* background-color: #fff; */
     background-color: #888;
+    opacity: 1;
+}
+
+.dots__dot-img--active {
+    background-color: #fff;
     opacity: 1;
 }
 
